--- a/css/header.css
+++ b/css/header.css
@@ -139,11 +139,14 @@ body {
 	width: 29%;
 	padding-left: 1%;
 }
-.profilePage .profileImage {
+.profileImage {
 	float: left;
 	width: 100px;
 	height: 100px;
 	background: url('../images/empty-100.png');
+	border-radius: 5px;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
 }
 .profilePage .profileName {
 	float: left;
@@ -164,17 +167,28 @@ body {
 	float: left;
 }
 .job {
+	height: 101px;
 	border: 1px solid #ddd;
-	padding: 3px 0 0 0;
+	padding: 4px;
 	overflow: hidden;
-	margin-top: 3px;
+	margin-bottom: 3px;
 	background-color: #f0f0f0;
-	box-shadow: -3px -3px 20px rgba(0, 0, 0, .25) inset;
-	-moz-box-shadow: -3px -3px 20px rgba(0, 0, 0, .25) inset;
-	-webkit-box-shadow: -3px -3px 20px rgba(0, 0, 0, .25) inset;
+	box-shadow: -3px -3px 20px rgba(0, 0, 0, 0.25) inset;
+	-moz-box-shadow: -3px -3px 20px rgba(0, 0, 0, 0.25) inset;
+	-webkit-box-shadow: -3px -3px 20px rgba(0, 0, 0, 0.25) inset;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
+}
+.job .leftSide {
+	float: left;
+	min-width: 329px;
+	max-width: 629px;
+	border-right: 1px solid #ddd;
+}
+.job .rightSide {
+	float: right;
+	width: 150px;
 }
 .jobHeader {
 	color: #fff;
@@ -182,24 +196,45 @@ body {
 	padding: 5px 0 0 5px;;
 	background: #036;
 }
-.position {
-	float: left;
-}
-.wage {
-	float: right;
-	width: 20%;
-}
-.hours {
-	float: right;
-	width: 20%;
-}
 .jobTitle {
-	padding-left: 10px;
+	text-align: center;
+}
+.jobTitle a {
+	color: #036;
+	font-size: 14pt;
+	font-family: Arial, Helvetica, Verdana, sans-serif;
+	font-weight: bold;
+	text-decoration: none;
 }
 .jobDescription {
-	padding-left: 2px;
+	height: 60px;
+	padding: 0 2px;
+	overflow: hidden;
+}
+.position {
+}
+.company {
+	font-size: 13pt;
+	font-family: Arial, Helvetica, Verdana, sans-serif;
+	font-weight: bold;
+}
+.hours {
+	height: 40px;
+	text-align: center;
+}
+.hours > div {
+	font-weight: bold;
+}
+.wage {
+	height: 40px;
+	text-align: center;
+}
+.wage > div {
+	font-weight: bold;
+}
+.date {
+	padding: 3px 0 0 5px;
 }
 .profilePage .rightSide .job {
 	height: 40px;
 }
-	
