--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,27 @@ body {
 	font-size-adjust: none;
 	letter-spacing: 0;
 }
+.text{
+	font-family: Arial, Helvetica,  Verdana, sans-serif;		
+	font-size: 9pt;
+	color: #000000;
+}
+.big.text {
+	font-size: 18px;
+}
+.tall.text {
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+.leftJustify {
+	text-align: left;
+}
+.centerJustify {
+	text-align: center;
+}
+.rightJustify {
+	text-align: right;
+}
 .regColors {
 	border: 1px solid #ddd;
 	background: #fafafa;
@@ -152,33 +173,6 @@ body {
 	width: 69%;
 	border-right: 1px solid #ddd;
 }
-.profilePage .rightSide {
-	float: left;
-	width: 29%;
-	border: 0;
-	padding-left: 1%;
-}
-.profilePage .rightSide > div:first-child {
-	text-align: center;
-	margin-bottom: 3px;
-}
-.profilePage .rightSide a.job {
-	height: 40px;
-	margin: 2px auto;
-	display: block;
-	font-size: 14px;
-}
-.profilePage .rightSide .job .jobTitle {
-	height: 15px;
-	overflow: hidden;
-	padding-top: 5px;
-}
-.profilePage .rightSide .job .jobDescription {
-	color: #000;
-	height: 17px;
-	overflow: hidden;
-	margin-top: 5px;
-}
 .profileImage {
 	float: left;
 	width: 100px;
@@ -206,6 +200,37 @@ body {
 }
 .profilePage .studentSkills .skill {
 	float: left;
+}
+.profilePage .rightSide {
+	float: left;
+	width: 29%;
+	border: 0;
+	padding-left: 1%;
+}
+.topDivider {
+	border-top: 1px solid #ddd;
+	padding-top: 5px;
+}
+.profilePage .rightSide > div:first-child {
+	text-align: center;
+	margin-bottom: 3px;
+}
+.profilePage .rightSide a.job {
+	height: 40px;
+	margin: 2px auto;
+	display: block;
+	font-size: 14px;
+}
+.profilePage .rightSide .job .jobTitle {
+	height: 20px;
+	overflow: hidden;
+	padding-top: 3px;
+}
+.profilePage .rightSide .job .jobDescription {
+	color: #000;
+	height: 17px;
+	overflow: hidden;
+	margin-top: 5px;
 }
 .rightSide .top {
 	padding: 5px 0 3px 0;
@@ -368,7 +393,17 @@ body {
 .jobSkills h4 {
 	font-size: 14px;
 }
+#skills_table .top {
+	padding-top: 10px;
+	font-size: 14px;
+}
+.sections {
+	margin: 10px 15px;
+	font-size: 14px;
+	font-weight: bold;
+}
 .sub {
+	margin-right: 10px;
 	text-align: left;
 }
 #form_container {
