Changed edit_company.php to only show the company description if you are logged in as an employer.

--- a/css/header.css
+++ b/css/header.css
@@ -19,6 +19,9 @@ body {
 .big.text {
 	font-size: 18px;
 }
+.bold.text {
+	font-weight: bold;
+}
 .tall.text {
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -430,4 +433,10 @@ body {
 }
 .jobControls a {
 	margin: 0 5px;
+}
+.editCompanyForm {
+	width: 100%;
+	text-align: center;
+}
+.editCompanyForm form {
 }
