--- a/css/header.css
+++ b/css/header.css
@@ -11,6 +11,15 @@ body {
 	font-size-adjust: none;
 	letter-spacing: 0;
 }
+h1 {
+	font-size: 24px;
+}
+h2 {
+	font-size: 20px;
+}
+h3 {
+	font-size: 16px;
+}
 .text{
 	font-family: Arial, Helvetica,  Verdana, sans-serif;		
 	font-size: 9pt;
