--- a/css/jobs.css
+++ b/css/jobs.css
@@ -33,6 +33,17 @@ a.plain,a.plain:hover{
 font-size: 22pt; color: #222222;
 }
 
+.notice {
+font-family: Tahoma, Helvetica, Verdana, sans-serif;
+font-weight: bold;
+background-color: #FFF8C6;
+border: 1px solid #C8B560;
+padding: 5px;
+border-radius: 5px;
+-moz-border-radius: 5px;
+-webkit-border-radius: 5px;
+}
+
 #leftbox {
 background-color: #f0f0f0;
 position: fixed;
