Grayed out the deleted jobs, consolidated add logo and edit profile into just edit profile, added the ability to edit skills if no skills are specified

--- a/css/header.css
+++ b/css/header.css
@@ -48,6 +48,17 @@ h3 {
 	border: 1px solid #ddd;
 	background: #fafafa;
 }
+.deleted {
+opacity: .5;
+}
+.deleted div {
+text-decoration: line-through;
+}
+
+#edit_profile {
+font-size: 14px;
+}
+
 #citNav {
 	text-align: center;
 	background: url("../images/bannerBack.png") repeat-x;
