--- a/css/header.css
+++ b/css/header.css
@@ -20,6 +20,10 @@ h2 {
 h3 {
 	font-size: 16px;
 }
+li {
+	list-style: decimal;
+	margin-left: 30px;
+}
 .text{
 	font-family: Arial, Helvetica,  Verdana, sans-serif;		
 	font-size: 9pt;
@@ -54,21 +58,19 @@ h3 {
 .deleted div {
 	text-decoration: line-through;
 }
-
 .admin_controls {
 	float: right;
-	padding: 10px;
 	border: 2px solid #036;
 	margin: 0px 10px;
+	padding: 3px;
+	font-size: 12px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
 }
-
 #edit_profile {
 	font-size: 14px;
 }
-
 #citNav {
 	text-align: center;
 	background: url("../images/bannerBack.png") repeat-x;
@@ -551,7 +553,18 @@ a.next.arrow:hover {
 .privacyPolicy ol {
 	padding: 15px 0 30px 0;
 }
-.privacyPolicy li {
-	margin-left: 30px;
-	list-style: decimal;
+.question {
+	text-align: left;
+}
+.question h2 {
+	margin: 15px 0 5px 0;
+}
+.question div {
+	margin-left: 10px;
+}
+.question ul {
+	padding: 5px 0 10px 0;
+}
+.question li {
+	padding: 2px 0;
 }
